// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`node/inline-edit/inline-edit-manager.spec.ts > performs inline edit on file 1`] = `
[
  {
    "content": "I am working in file \`node/test/fixtures/poem.txt\` with the following contents:
\`\`\`txt
Moonlight whispers through the trees,
Silver shadows dance with ease.
Stars above like diamonds bright,
Paint their stories in the night.
\`\`\`

Please change 'Silver' to 'Golden' in line 2",
    "role": "user",
  },
]
`;

exports[`node/inline-edit/inline-edit-manager.spec.ts > performs inline edit with selection 1`] = `
[
  {
    "content": "I am working in file \`node/test/fixtures/poem.txt\` with the following contents:
\`\`\`txt
Moonlight whispers through the trees,
Silver shadows dance with ease.
Stars above like diamonds bright,
Paint their stories in the night.
\`\`\`

I have the following text selected on line 1:
\`\`\`
Silver shadows dance with ease.
\`\`\`

Please change 'Silver' to 'Golden'",
    "role": "user",
  },
]
`;
